# django_samples

./: db.sqlite3  pyproject.toml
rates/: admin.py  forms.py  models.py  schema.py  urls.py  validator.py  views.py
rates/migrations/: 0001_initial.py  0002_rate_credit_union.py
rates/static/rates/js/: main.es6  notify.es6  store.es6  ui.es6  utils.es6
rates/templates/rates/: home.jinja
sample/: settings.py  urls.py
