[tool.poetry]
name = "django-example"
version = "0.1.0"
description = ""
authors = ["Fabian Rodriguez <fabian.rodrez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
django-jinja = "^2.10.2"
black = "^23.7.0"
django-extensions = "^3.2.3"
django-compressor = "^4.4"
jsonschema = "^4.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
